--- a/banglore-home-price/artifiacts/begaluru_property_price.ipynb
+++ b/banglore-home-price/artifiacts/begaluru_property_price.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(\"c:\\\\users\\\\prem\\\\documents\\\\_csv\\\\Bengaluru_House_data.csv\")"
+    "df1 = pd.read_csv(\"\Bengaluru_House_data.csv\")"
    ]
   },
   {
