--- a/banglore-home-price/artifiacts/begaluru_property_price.ipynb
+++ b/banglore-home-price/artifiacts/begaluru_property_price.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(\"\Bengaluru_House_data.csv\")"
+    "df1 = pd.read_csv(\"Bengaluru_House_data.csv\")"
    ]
   },
   {
@@ -4328,7 +4328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = open('c:\\\\users\\\\prem\\\\documents\\\\bengaluru_price_prediction_model.pickle' , 'wb')\n",
+    "f = open('banglore_home_prices_model.pickle' , 'wb')\n",
     "pickle.dump(lr_clf , f)"
    ]
   },
@@ -4352,9 +4352,9 @@
    "source": [
     "import json \n",
     "columns = {\n",
-    "    'DataColumns' : [column.lower() for column in X.columns]\n",
+    "    'data_columns' : [column.lower() for column in X.columns]\n",
     "}\n",
-    "f = open('c:\\\\users\\\\prem\\\\documents\\\\data_columns.json' , 'w')\n",
+    "f = open('columns.json' , 'w')\n",
     "f.write(json.dumps(columns))\n"
    ]
   },
